--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,31 @@
 {
-  "name": "Content Creator Insta Extension",
-  "description": "An Instagram extension to help content creators create dance content faster.",
-  "version": "1.0",
+  "name": "FollowAssist",
+  "description": "An Instagram extension to assist users in following along with reels or video posts.",
+  "version": "2.0.1",
   "manifest_version": 3,
-  "permissions": [
-    "activeTab"
-  ],
   "content_scripts": [
     {
       "matches": [
         "https://www.instagram.com/*"
       ],
-      "js": ["contentCreatorScript.js"],
+      "js": ["followAssist.js"],
       "css": [ "style.css" ],
       "run_at": "document_end"
     }
   ],
-  "permissions": [
-    "activeTab"
-  ]
+  "web_accessible_resources": [
+    {
+      "resources": ["*.png"],
+      "matches": ["https://www.instagram.com/*"]
+    }
+  ],
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
+  "action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  }
 }
